# CMakeList.txt : CMake project for ICE_Task_1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ICE_Task_1")

# Add source to this project's executable.
add_executable (ICE_Task_1 "ICE_Task_1.cpp" )

# TODO: Add tests and install targets if needed.
