# CMakeList.txt : CMake project for ICE_Task_1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("larger_than_n")

# Add source to this project's executable.
add_executable (larger_than_n "larger_than_n.cpp" )

# TODO: Add tests and install targets if needed.
